# k50pyutils

./: README.md  pyproject.toml
k50pyutils/: __init__.py  excelwriter.py  sql.py
k50pyutils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
