[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "k50pyutils"
version = "0.1.0"
description = "Personal collection of Python helper functions"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Kevin Mark Lock, email = "kevin.lock03@gmail.com"}]
dependencies = [
    "pandas",
    "xlwings"
]

[tool.setuptools.packages.find]
where = ["."]
